--- a/index.html
+++ b/index.html
@@ -1,15 +1,139 @@
 <!DOCTYPE html>
-<html> 
-    <!-- Sección de Metadatos -->
-    <head>
-        <title>My Terrarium</title>
-        <meta charset="utf-8"/> 
-    </head>
-    <body>
-        <h1>My Terrarium</h1>
-        <img 
-            src ="https://pr0.nicelocal.com.mx/C7-V0plJ9nYAP1BvyDilvg/587x440,q85/4px-BW84_n0QJGVPszge3NRBsKw-2VcOifrJIjPYFYkOtaCZxxXQ2Xj6FCrNPGxuLBYctXnmH4vBBwtE_XLaBkTe1MN38898Xo69M2A_opWiX_5vGM5LOg"
-              alt ="ITGAM"
-            width ="500px"
-    </body>
+<html>
+   <!-- Sección de Metadatos -->
+   <head>
+      <title>Mi Terrario</title>
+      <meta charset="utf-8" />
+   </head>
+   <body>
+      <div id="page">
+         <div class="container" id="left-container">
+            <div class="plant-holder">
+               <img
+                  src="./image/plant1.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant1"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant2.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant2"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant3.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant3"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant4.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant4"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant5.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant5"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant6.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant6"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant7.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant7"
+                  />
+            </div>
+         </div>
+         <div class="container" id="right-container">
+            <div class="plant-holder">
+               <img
+                  src="./image/plant8.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant8"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant9.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant9"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant10.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant10"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant11.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant11"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant12.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant12"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant13.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant13"
+                  />
+            </div>
+            <div class="plant-holder">
+               <img
+                  src="./image/plant14.png"
+                  alt="plant"
+                  class="plant"
+                  id="plant14"
+                  />
+            </div>
+         </div>
+      </div>
+      <!-- Terrario -->
+      <div class="terrarium">
+        <div class="jar-top"></div>
+        <div class="jar-walls">
+          <div class="jar-glossy-long"></div>
+          <div class="jar-glossy-short"></div>
+        </div>
+        <div class="dirt"></div>
+        <div class="jar-bottom"></div>
+      </div>
+    </div>
+   </body>
 </html>
